--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página home</h1>
+    <h1>Home</h1>
     <a href="vendas.html">Voltar para página inicial</a>
 </body>
 </html>
