--- a/vendas.html
+++ b/vendas.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Página de Vendas</h1>
     <p>Vendas 1</p>
-    <p>Vendas 2</p>
+    <p>Venda Total: R$7000.00</p>
     <a href="index.html">Voltar para página inicial</a>
 </body>
 </html>
